2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added Style test.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxTest.cs, ListBoxItemTest.cs: Added or expanded some tests.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added some tests.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxItemTest.cs: Added or expanded some tests.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MeasureOrder test.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Expanded StarSizingMeasure test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added StarSizingMeasure test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added InItemsControlSimple.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxTest.cs, ListBoxItemTest.cs: Added.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Expanded MultipleColumnSpanStar test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added StarSizingWithMinimumMaximumMeasure test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidth3 test.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidth2 test.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MeasureConstraint* tests.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added GetVisualChildOutOfRange test.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MultipleColumnSpan* tests.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidthMeasureConstraint test.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidth, MaxWidth tests.
